Fixes spacing for time and place info on the masthead

--- a/templates/sass/screen.sass
+++ b/templates/sass/screen.sass
@@ -79,6 +79,7 @@ header.top
   +box-shadow(1px 0 0 #CCC)
 .event_date
   text-transform: uppercase
+  margin-left: 30px
 .location
   float: left
   padding: 5px 10px 10px
@@ -111,7 +112,7 @@ header.top
 
 .bubble
   +box-shadow(0 1px 0 rgba(255, 255, 255, 0.4) inset, 0 -3px 0 rgba(0, 0, 0, 0.3) inset, 0 0 10px rgba(255, 255, 255, 0.3) inset, 0 2px 4px rgba(0, 0, 0, 0.1))
-  margin-bottom: 75px
+  margin-bottom: 29px
   padding: 10px
   position: relative
   margin-left: 43px
